[gd_scene load_steps=10 format=3 uid="uid://capq4lbnciixg"]

[ext_resource type="Script" uid="uid://qlqeysesb67k" path="res://scripts/making_words_cutscene.gd" id="1_cutscene_script"]
[ext_resource type="Texture2D" uid="uid://d3pk2m8g24na8" path="res://Assets/Images/main_menu_bg.png" id="2_28us2"]
[ext_resource type="Texture2D" uid="uid://f65jlmr8kv0p" path="res://Assets/Images/SunnyWave.png" id="3_ucowr"]
[ext_resource type="Texture2D" uid="uid://bhw1fghyl6uru" path="res://Assets/Images/EllieBubble2.png" id="4_ucowr"]
[ext_resource type="AudioStream" uid="uid://dkl7ojwvoeu2o" path="res://Assets/Audio/Sandy Sparks Welcome (Temp).wav" id="5_ltmmw"]
[ext_resource type="AudioStream" uid="uid://cd3s2nkeijomp" path="res://Assets/Audio/Background1.mp3" id="6_votm8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_back"]
bg_color = Color(0.8, 0.4, 0.2, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.3, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skip"]
bg_color = Color(0.8, 0.4, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.3, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_continue"]
bg_color = Color(0.2, 0.8, 0.3, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.1, 0.6, 0.2, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MakingWordsCutscene" type="Node2D"]
script = ExtResource("1_cutscene_script")

[node name="Background" type="Node2D" parent="."]

[node name="LabBackground" type="Sprite2D" parent="Background"]
position = Vector2(578, 322)
scale = Vector2(0.819602, 0.813131)
texture = ExtResource("2_28us2")

[node name="Character" type="Node2D" parent="."]

[node name="ScientistCharacter" type="Sprite2D" parent="Character"]
position = Vector2(848.425, 348.575)
scale = Vector2(0.348486, 0.384863)
texture = ExtResource("3_ucowr")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeechBubble" type="Sprite2D" parent="UI"]
position = Vector2(503.375, 241.5)
scale = Vector2(1.48548, 1.15467)
texture = ExtResource("4_ucowr")

[node name="DialogueText" type="Label" parent="UI/SpeechBubble"]
offset_left = -180.0
offset_top = -80.0
offset_right = 124.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(0.4, 0.2, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Welcome to my laboratory!
Let's mix potions to create
sight words!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TypewriterEffect" type="Node" parent="UI"]

[node name="BackButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 246.0
offset_top = 539.0
offset_right = 366.0
offset_bottom = 589.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_back")
text = "‚Üê Back"

[node name="SkipButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 605.0
offset_top = 540.0
offset_right = 721.0
offset_bottom = 586.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_skip")
text = "Skip"

[node name="ContinueButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 372.0
offset_top = 429.0
offset_right = 572.0
offset_bottom = 489.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_continue")
text = "Let's Start!"

[node name="Audio" type="Node2D" parent="."]

[node name="IntroAudio" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2(640, 360)
stream = ExtResource("5_ltmmw")
volume_db = -10.0
autoplay = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_votm8")
volume_db = -20.0
autoplay = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="UI/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="UI/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="finished" from="Audio/IntroAudio" to="." method="_on_intro_audio_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
